@@ -1,6 +1,6 @@
 ---
 name: Test-Run-CmdLine
-version: 0.0112
+version: 0.0120
 author:
   - 'Shlomi Fish <shlomif@cpan.org>'
 abstract: Analyze tests from the command line using Test::Run
@@ -13,29 +13,30 @@ build_requires:
   Test::More: 0
   Test::Trap: 0
 requires:
-  Test::Run::Core: 0.0118
+  Moose: 0
+  Test::Run::Core: 0.0120
   UNIVERSAL::require: 0
-  YAML: 0
+  YAML::XS: 0
 configure_requires:
-  Module::Build: 0.3306
+  Module::Build: 0.34
 provides:
   Test::Run::CmdLine:
     file: lib/Test/Run/CmdLine.pm
-    version: 0.0112
+    version: 0.0120
   Test::Run::CmdLine::Drivers::Default:
     file: lib/Test/Run/CmdLine/Drivers/Default.pm
   Test::Run::CmdLine::Iface:
     file: lib/Test/Run/CmdLine/Iface.pm
   Test::Run::CmdLine::Prove:
     file: lib/Test/Run/CmdLine/Prove.pm
-    version: 0.0100_05
+    version: 0.0120
   Test::Run::CmdLine::Prove::App:
     file: lib/Test/Run/CmdLine/Prove/App.pm
   Test::Run::CmdLine::Trap::Prove:
     file: lib/Test/Run/CmdLine/Trap/Prove.pm
   Test::Run::CmdLine::Trap::ProveApp:
     file: lib/Test/Run/CmdLine/Trap/ProveApp.pm
-generated_by: Module::Build version 0.3306
+generated_by: Module::Build version 0.34
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
