@@ -1,15 +1,16 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.33_06
+# Note: this file was auto-generated by Module::Build::Compat version 0.34
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
           'NAME' => 'Test::Run::CmdLine',
           'VERSION_FROM' => 'lib/Test/Run/CmdLine.pm',
           'PREREQ_PM' => {
+                           'Moose' => 0,
                            'Test::More' => 0,
-                           'Test::Run::Core' => '0.0118',
+                           'Test::Run::Core' => '0.0120',
                            'Test::Trap' => 0,
                            'UNIVERSAL::require' => 0,
-                           'YAML' => 0
+                           'YAML::XS' => 0
                          },
           'INSTALLDIRS' => 'site',
           'EXE_FILES' => [
